[gd_scene load_steps=4 format=3 uid="uid://cegefpn5j7sbx"]

[ext_resource type="Script" path="res://UI/Select chapter menu/select_chapter.gd" id="1_u5i43"]
[ext_resource type="FontFile" uid="uid://cjeu0hxviapqu" path="res://Assets/fonts/PixelOperator8.ttf" id="2_f2pyk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cvsut"]
bg_color = Color(0.230315, 0.230315, 0.230315, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Select Chapter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u5i43")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -50.5
offset_right = 42.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cvsut")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="C1" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f2pyk")
theme_override_font_sizes/font_size = 16
text = "Chapter 1"

[node name="C2" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f2pyk")
theme_override_font_sizes/font_size = 16
text = "Chapter 2"

[node name="C3" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f2pyk")
theme_override_font_sizes/font_size = 16
text = "Chapter 3"

[node name="Back" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("2_f2pyk")
theme_override_font_sizes/font_size = 8
text = "Back"

[connection signal="pressed" from="PanelContainer/VBoxContainer/C1" to="." method="_on_c_1_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/C2" to="." method="_on_c_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/C3" to="." method="_on_c_3_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
